--- a/s3/package.json
+++ b/s3/package.json
@@ -2,5 +2,8 @@
   "name": "s3",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "aws-sdk": "^2.528.0"
+  }
 }
