--- a/s3/operations/serverless.yml
+++ b/s3/operations/serverless.yml
@@ -21,6 +21,7 @@ functions:
       - http:
           path: appendText
           method: put
+      - cloudwatchLog: "/aws/lambda/appendText"
 
 resources:
   Resources:
