--- a/s3/events/serverless.yml
+++ b/s3/events/serverless.yml
@@ -5,31 +5,32 @@ provider:
   runtime: nodejs10.x
   profile: default
   region: eu-west-1
+  iamManagedPolicies:
+    - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
 
 functions:
   hello:
     handler: handler.hello
     events:
       - s3:
-        bucket: wb-s3-example-event-handling
-        event: s3:ObjectCreated:*
-        rules:
-          - prefix: uploads/
-          - suffix: .txt
+          bucket: wb-s3-example-event-handling
+          event: s3:ObjectCreated:*
+          rules:
+            - prefix: uploads/
+            - suffix: .txt
 
   bye:
     handler: handler.bye
     events:
       - s3:
-        bucket: wb-s3-example-event-handling
-        event: s3:ObjectRemoved:*
-        rules:
-          - prefix: uploads/
-          - suffix: .txt
-
-resources:
-  Resources:
-    NewResource:
-      Type: AWS::S3::Bucket
-      Properties:
-        BucketName: wb-s3-example-event-handling
+          bucket: wb-s3-example-event-handling
+          event: s3:ObjectRemoved:*
+          rules:
+            - prefix: uploads/
+            - suffix: .txt
+# resources:
+#   Resources:
+#     NewResource:
+#       Type: AWS::S3::Bucket
+#       Properties:
+#         BucketName: wb-s3-example-event-handling
