--- a/application.services/sqs/serverless.yml
+++ b/application.services/sqs/serverless.yml
@@ -7,7 +7,8 @@ custom:
 provider:
   name: aws
   runtime: nodejs10.x
-  region: ew-west-1
+  region: eu-west-1
+  environment: ${self:custom.settings}
   iamManagedPolicies:
     - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
 
@@ -15,7 +16,7 @@ provider:
     - Effect: "Allow"
       Action:
         - "sqs:SendMessage"
-      Resource: "arn:aws:sqs:${self:provider.region}:*:MyQueue"
+      Resource: "arn:aws:sqs:${self:provider.region}:*:TestQueue"
 
 functions:
   hello:
@@ -29,11 +30,14 @@ functions:
     events:
       - sqs:
           arn:
+            Fn::GetAtt:
+              - TestQueue
+              - Arn
           batchSize: 1
 
 resources:
   Resources:
     TestQueue:
-      Type: "AWS:SQS:Queue"
+      Type: "AWS::SQS::Queue"
       Properties:
         QueueName: "TestQueue"
